Fix layout issues

--- a/source/_assets/sass/variables.scss
+++ b/source/_assets/sass/variables.scss
@@ -50,8 +50,8 @@ html, body {
   background-color: #fff;
   color: #495155;
   /*color: #636b6f;*/
-  font-family: 'Raleway';
-  font-weight: 300;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 200;
   height: 200vh;
   font-size: 110%;
   line-height: 125%;
@@ -90,7 +90,7 @@ html, body {
   color: #636b6f;
   padding: 0 25px;
   font-size: 12px;
-  font-weight: 400;
+  //font-weight: 200;
   letter-spacing: .1rem;
   text-decoration: none;
   text-transform: uppercase;
@@ -103,6 +103,7 @@ html, body {
 h1, h2, h3 {
 
   color: #2b3337;
+  font-family: "Raleway", sans-serif !important;
 
 }
 
@@ -112,7 +113,19 @@ h1 > a, h2 > a, h3 > a{
 
 }
 
-h2 > a{
+h1 {
+
+  font-weight: 500 !important;
+
+}
+
+h2 {
+
+  font-weight: 400 !important;
+
+}
+
+h3 {
 
   font-weight: 300 !important;
 
